Created sum node

--- a/ros2_ws/src/sum/CMakeLists.txt
+++ b/ros2_ws/src/sum/CMakeLists.txt
@@ -10,6 +10,16 @@ find_package(ament_cmake REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(std_msgs REQUIRED)
+
+add_executable(sum src/sum.cpp)
+ament_target_dependencies(sum rclcpp std_msgs)
+
+install(TARGETS 
+ sum
+ DESTINATION lib/${PROJECT_NAME}
+ )
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
