--- a/ros2_ws/src/stats/CMakeLists.txt
+++ b/ros2_ws/src/stats/CMakeLists.txt
@@ -17,8 +17,12 @@ find_package(example_interfaces REQUIRED)
 add_executable(mean src/mean.cpp)
 ament_target_dependencies(mean rclcpp std_msgs example_interfaces)
 
+add_executable(median src/median.cpp)
+ament_target_dependencies(median rclcpp std_msgs example_interfaces)
+
 install(TARGETS 
  mean
+ median
  DESTINATION lib/${PROJECT_NAME}
  )
 
