Added wandering and following package

--- a/ros2_ws/src/.vscode/settings.json
+++ b/ros2_ws/src/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "cmake.sourceDirectory": "/home/shubh/SJO038/ros2_ws/src/examples"
+    "cmake.sourceDirectory": "/home/shubh/SJO038/ros2_ws/src/examples",
+    "files.associations": {
+        "cmath": "cpp",
+        "complex": "cpp"
+    }
 }
