--- a/ros2_ws/src/wander_bot/package.xml
+++ b/ros2_ws/src/wander_bot/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>stats</name>
+  <name>wander_bot</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="shubhsinghal02@gmail.com">shubh</maintainer>
@@ -9,18 +9,17 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <build_depend>rclcpp</build_depend>
-  <build_depend>std_msgs</build_depend>
-
-  <exec_depend>rclcpp</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
-  <exec_depend>example_interfaces</exec_depend>
-  <exec_depend>nav_msgs</exec_depend>
-
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
-  <test_depend>example_interfaces</test_depend>
-  <test_depend>nav_msgs</test_depend>
+
+  <build_depend>rclcpp</build_depend>
+  <build_depend>sensor_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+
+  <exec_depend>rclcpp</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
+
 
   <export>
     <build_type>ament_cmake</build_type>
